--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -1,4 +1,24 @@
 # 所有非专家模式福袋的物品都顶格写
+新手礼包:
+  1:
+    giveAllItems: true
+    items:
+    - 铜质短剑
+    - 铜镐
+    - 链锤
+    - 铜质短弓
+    - 木箭:128
+    - 火花魔棒
+    - 魔力星
+    - 松鼠召唤杖
+    - 敏捷药水:3
+    - 鱼鳃药水:2
+    - 回城药水:3
+    - 火把:25
+    - 炸弹:10
+    - 箱子:3
+    - 新手版挥发明胶
+    - 归一心元石
 木匣:
   1:
     giveAllItems: false
@@ -279,12 +299,27 @@
     giveAllItems: true
     items:
     - 钻石:5:10
+血肉晶簇:
+  1:
+    giveAllItems: false
+    items:
+    - 寒元锭:2:3
+    - 永恒锭:2:3
+    - 熔渣锭:2:3
+  2:
+    giveAllItems: false
+    items:
+    - 混乱核心:1:3
+    - 冰川核心:1:3
+    - 日光核心:1:3
 # 所有专家模式福袋都在下方按克苏鲁之眼福袋的格式写
 专家模式福袋:
   史莱姆王:
     1:
       items:
       - 皇家凝胶
+      - 金币
+      - 弱效治疗药水:5:15
     2:
       giveAllItems: false
       amountToGive: 2
@@ -301,6 +336,7 @@
       - 贝壳:30:40
       - 天蓝石:1:1:0.3333
       - 伏打凝胶:1:1:0.3333
+      - 金币
     2:
       giveAllItems: false
       items:
@@ -329,6 +365,8 @@
       - 腐化种子:1:3
       - 泪刃:1:1:0.1
       - 死亡凝视法杖:1:1:0.3333
+      - 金币:3
+      - 弱效治疗药水:5:15
   菌生蟹:
     1:
       giveAllItems: false
@@ -348,6 +386,8 @@
       - 蠕虫围巾
       - 恶魔矿:30:59
       - 暗影鳞片:10:19
+      - 金币:3
+      - 弱效治疗药水:5:15
   腐巢意志:
     1:
       giveAllItems: false
@@ -373,6 +413,8 @@
       - 骨头手套
       - 骨头:30:60
       - 骷髅头法书:1:1:0.3333
+      - 金币:5
+      - 弱效治疗药水:5:15
   史莱姆之神:
     1:
       giveAllItems: false
@@ -408,6 +450,8 @@
       items:
       - 恶魔之心
       - 屠杀:1:1:0.1
+      - 金币:8
+      - 治疗药水:5:15
   史莱姆皇后:
     1:
       giveAllItems: false
@@ -421,6 +465,8 @@
       - 失谐钩爪:1:1:0.3333
       - 刃杖:1:1:0.3333
       - 挥发明胶
+      - 金币:10
+      - 强效治疗药水:5:15
   极地之灵:
     1:
       giveAllItems: false
@@ -433,6 +479,8 @@
       items:
       - 极寒之魂
       - 冰川精华:5:9
+      - 金币:12
+      - 强效治疗药水:5:15
   双子魔眼:
     1:
       items:
@@ -440,6 +488,8 @@
       - 视域之魂:25:40
       - 机械车轮片
       - 劲弩:1:1:0.1
+      - 金币:12
+      - 强效治疗药水:5:15
     2:
       progressRequired: 机械三王
       items:
@@ -456,12 +506,16 @@
       items:
       - 海之烧灼:1:1:0.1
       - 核燃料棒:1:1:0.3333
+      - 金币:12
+      - 强效治疗药水:5:15
   毁灭者:
     1:
       items:
       - 强效治疗药水:5:15
       - 力量之魂:25:40
       - 机械车体片
+      - 金币:12
+      - 强效治疗药水:5:15
     2:
       progressRequired: 机械三王
       items:
@@ -479,12 +533,16 @@
       - 地狱降临:1:1:0.1
       - 魔鬼之庇护
       - 混乱精华:5:9
+      - 金币:12
+      - 强效治疗药水:5:15
   机械骷髅王:
     1:
       items:
       - 强效治疗药水:5:15
       - 恐惧之魂:25:40
       - 机械电池片
+      - 金币:12
+      - 强效治疗药水:5:15
     2:
       progressRequired: 机械三王
       items:
@@ -505,6 +563,8 @@
       - 混乱之息:1:1:0.1
       - 灾厄尘:30:35
       - 混乱精华:10:15
+      - 金币:15
+      - 强效治疗药水:5:15
   世纪之花:
     1:
       giveAllItems: false
@@ -523,6 +583,8 @@
       - 矮人法杖:1:1:0.5
       - 刺钩:1:1:0.1
       - 叶流:1:1:0.1
+      - 金币:15
+      - 强效治疗药水:5:15
   阿娜希塔和利维坦:
     1:
       giveAllItems: false
@@ -536,6 +598,8 @@
       items:
       - 利维坦龙涎香
       - 归一心元石
+      - 金币:15
+      - 强效治疗药水:5:15
   白金星舰:
     1:
       giveAllItems: false
@@ -550,6 +614,8 @@
       - 星尘:30:40
       - 坠星:20:30
       - 星爆核心:1:1:0.3333
+      - 金币:15
+      - 强效治疗药水:5:15
   石巨人:
     1:
       giveAllItems: false
@@ -561,8 +627,11 @@
       items:
       - 闪亮石
       - 甲虫外壳:18:23
+      - 日光精华:10:12
       - 锯刃镐:1:1:0.3333
       - 庇护之刃:1:1:0.1
+      - 金币:15
+      - 强效治疗药水:5:15
   瘟疫使者歌莉娅:
     1:
       giveAllItems: false
@@ -583,6 +652,8 @@
       - 毒刺:4:8
       - 瘟疫细胞罐:25:30
       - 瘟疫装甲镀层:30:35
+      - 金币:18
+      - 强效治疗药水:5:15
   光之女皇:
     1:
       giveAllItems: false
@@ -595,6 +666,8 @@
       items:
       - 翱翔徽章
       - 女皇之翼:1:1:0.1
+      - 金币:18
+      - 强效治疗药水:5:15
   猪鲨公爵:
     1:
       giveAllItems: false
@@ -607,6 +680,8 @@
       items:
       - 猪鲨之翼:1:1:0.1
       - 海爵剑:1:1:0.1
+      - 金币:18
+      - 强效治疗药水:5:15
   毁灭魔像:
     1:
       giveAllItems: false
@@ -624,6 +699,8 @@
       items:
       - 维苏威阿斯:1:1:0.1
       - 血肉晶簇
+      - 金币:18
+      - 强效治疗药水:5:15
     4:
       progressRequired: 亵渎天神，普罗维登斯
       items:
@@ -642,6 +719,8 @@
       - 星神隐壳
       - 星尘:60:90
       - 坠星:30:50
+      - 金币:20
+      - 超级治疗药水:5:15
   月球领主:
     1:
       giveAllItems: false
@@ -661,3 +740,5 @@
       - 天界之翼
       - 夜明矿:90:110
       - 彩虹猫矿车:1:1:0.1
+      - 金币:20
+      - 超级治疗药水:5:15
