--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -49,7 +49,7 @@
     drop:
         - "铜币:100:150:1"
         - "钨钢金属废料:1:4:1"
-        - "钨钢屏障生成仪:1:1:0.1"
+        - "钨钢屏障生成仪:1:1:0.15"
         - "能源核心:1:1:0.35"
         - "可疑镀层:1:3:0.5"
         - "神秘电路:1:3:0.5"
@@ -413,14 +413,6 @@
     buffImmute:
         - "中毒"
         - "幻星感染"
-克苏鲁之眼:
-    drop:
-        - "弱效治疗药水:5:15:1"
-        - "铜币:75000:75000:1"
-史莱姆王:
-    drop:
-        - "弱效治疗药水:5:15:1"
-        - "铜币:25000:25000:1"
 尖刺史莱姆:
     drop:
         - "凝胶:1:1:0.5"
@@ -434,8 +426,6 @@
     buffImmute:
         - "咒火"
         - "剧毒"
-    drop:
-        - "铜币:30000:30000:1"
 骷髅王左手:
     buffInflict:
         - "缓慢|100|0.33"
@@ -463,13 +453,6 @@
         - "流血|100|0.5"
     buffImmute:
         - "中毒"
-血肉之墙:
-    drop:
-        - "强效治疗药水:2:4:1"
-史莱姆皇后:
-    drop:
-        - "强效治疗药水:5:15:1"
-        - "铜币:50000:50000:1"
 水晶史莱姆:
     drop:
         - "凝胶:1:2:1"
@@ -819,6 +802,24 @@
     buffInflict:
         - "冷冻|150|1"
         - "冰冻|100|0.1654"
+千足蜈蚣:
+    drop:
+        - 冥思溶剂:1:1:0.25
+流星火怪:
+    drop:
+        - 冥思溶剂:1:1:0.25
+火龙战士:
+    drop:
+        - 冥思溶剂:1:1:0.25
+火龙怪:
+    drop:
+        - 冥思溶剂:1:1:0.25
+火月怪:
+    drop:
+        - 冥思溶剂:1:1:0.25
+火滚怪:
+    drop:
+        - 冥思溶剂:1:1:0.25
 日耀柱:
     buffImmute:
         - "中毒"
@@ -826,6 +827,18 @@
         - "霜火"
         - "咒火"
         - "燃烧"
+异星黄蜂:
+    drop:
+        - 冥思溶剂:1:1:0.25
+星璇怪:
+    drop:
+        - 冥思溶剂:1:1:0.25
+漩泥怪:
+    drop:
+        - 冥思溶剂:1:1:0.25
+异星蜂王:
+    drop:
+        - 冥思溶剂:1:1:0.25
 星璇柱:
     buffImmute:
         - "中毒"
@@ -833,6 +846,18 @@
         - "霜火"
         - "咒火"
         - "燃烧"
+吮脑怪:
+    drop:
+        - 冥思溶剂:1:1:0.25
+预言怪:
+    drop:
+        - 冥思溶剂:1:1:0.25
+星云浮怪:
+    drop:
+        - 冥思溶剂:1:1:0.25
+进化兽:
+    drop:
+        - 冥思溶剂:1:1:0.25
 星云柱:
     buffImmute:
         - "中毒"
@@ -840,6 +865,21 @@
         - "霜火"
         - "咒火"
         - "燃烧"
+星尘细胞:
+    drop:
+        - 冥思溶剂:1:1:0.25
+银河织妖:
+    drop:
+        - 冥思溶剂:1:1:0.25
+流体入侵怪:
+    drop:
+        - 冥思溶剂:1:1:0.25
+观星怪:
+    drop:
+        - 冥思溶剂:1:1:0.25
+闪耀炮手:
+    drop:
+        - 冥思溶剂:1:1:0.25
 星尘柱:
     buffImmute:
         - "中毒"
