--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/wings.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/wings.yml
@@ -1,3 +1,4 @@
+# 二段跳
 跳跃之瓶:
     extraJumpTime: 1
     maxSpeed: 0.8
@@ -5,14 +6,15 @@
     horizontalSpeed: 0.6
 气球束:
     extraJumpTime: 2
-    maxSpeed: 0.8
+    maxSpeed: 0.9
     maxAcceleration: 100
-    horizontalSpeed: 0.6
+    horizontalSpeed: 0.7
 气球之母:
     extraJumpTime: 4
-    maxSpeed: 0.8
+    maxSpeed: 1
     maxAcceleration: 100
-    horizontalSpeed: 0.6
+    horizontalSpeed: 0.8
+# 火箭靴
 火箭靴:
     flightTime: 32
     maxSpeed: 0.75
@@ -22,58 +24,100 @@
     flightTime: 32
     maxSpeed: 0.75
     maxAcceleration: 0.125
-    horizontalSpeed: 0.75
+    horizontalSpeed: 0.8
+天使之靴:
+    flightTime: 32
+    maxSpeed: 0.75
+    maxAcceleration: 0.125
+    horizontalSpeed: 0.85
+# 翅膀，maxAcceleration = 0.1 + 加速度 / 100% / 20
 鸟妖之翼:
-    flightTime: 47
-    maxSpeed: 1
-    maxAcceleration: 0.1
-    horizontalSpeed: 0.9
+    flightTime: 43
+    maxSpeed: 0.92
+    maxAcceleration: 0.15
+    horizontalSpeed: 1
+    isWing: true
+喜庆之翼:
+    flightTime: 60
+    maxSpeed: 1.2
+    maxAcceleration: 0.15
+    horizontalSpeed: 1.15
     isWing: true
 猪鲨之翼:
     flightTime: 60
-    maxSpeed: 1.5
-    maxAcceleration: 0.175
-    horizontalSpeed: 1.5
+    maxSpeed: 1.3
+    maxAcceleration: 0.225
+    horizontalSpeed: 1.25
     isWing: true
 女皇之翼:
     flightTime: 50
-    maxSpeed: 1.35
-    maxAcceleration: 0.3
-    horizontalSpeed: 1.5
-    isWing: true
-喜庆之翼:
-    flightTime: 57
-    maxSpeed: 1.2
-    maxAcceleration: 0.125
-    horizontalSpeed: 1.35
+    maxSpeed: 1.25
+    maxAcceleration: 0.2375
+    horizontalSpeed: 1.2
     isWing: true
 日耀之翼:
     flightTime: 60
-    maxSpeed: 1.5
-    maxAcceleration: 0.15
-    horizontalSpeed: 1.5
+    maxSpeed: 1.4
+    maxAcceleration: 0.225
+    horizontalSpeed: 1.35
     isWing: true
 星尘之翼:
     flightTime: 60
-    maxSpeed: 1.5
-    maxAcceleration: 0.15
-    horizontalSpeed: 1.5
+    maxSpeed: 1.4
+    maxAcceleration: 0.225
+    horizontalSpeed: 1.35
     isWing: true
 星云之翼:
-    flightTime: 53
-    maxSpeed: 1.4
-    maxAcceleration: 0.125
-    horizontalSpeed: 1.4
+    flightTime: 60
+    maxSpeed: 1.35
+    maxAcceleration: 0.175
+    horizontalSpeed: 1.25
     isWing: true
 星璇之翼:
-    flightTime: 53
-    maxSpeed: 1.4
-    maxAcceleration: 0.125
-    horizontalSpeed: 1.4
+    flightTime: 60
+    maxSpeed: 1.35
+    maxAcceleration: 0.15
+    horizontalSpeed: 1.25
     isWing: true
 天界之翼:
     flightTime: 60
-    maxSpeed: 1.5
-    maxAcceleration: 0.2
-    horizontalSpeed: 1.65
+    maxSpeed: 1.35
+    maxAcceleration: 0.325
+    horizontalSpeed: 1.4
+    isWing: true
+天羽之翼:
+    flightTime: 27
+    maxSpeed: 1
+    maxAcceleration: 0.15
+    horizontalSpeed: 0.85
+    isWing: true
+星光之翼:
+    flightTime: 50
+    maxSpeed: 1.1
+    maxAcceleration: 0.15
+    horizontalSpeed: 1
+    isWing: true
+极寒之魂:
+    flightTime: 40
+    maxSpeed: 1.2
+    maxAcceleration: 0.15
+    horizontalSpeed: 1.15
+    isWing: true
+玉金喷射器:
+    flightTime: 40
+    maxSpeed: 1.4
+    maxAcceleration: 0.15
+    horizontalSpeed: 1.4
+    isWing: true
+幽渊斗篷:
+    flightTime: 60
+    maxSpeed: 1.3
+    maxAcceleration: 0.175
+    horizontalSpeed: 1.3
+    isWing: true
+逸界之翼:
+    flightTime: 60
+    maxSpeed: 1.4
+    maxAcceleration: 0.225
+    horizontalSpeed: 1.4
     isWing: true
