magic weapon projectiles

--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/brimlash_dart.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/brimlash_dart.properties
@@ -2,4 +2,4 @@ type=item
 items=438
 model=_proj0_25
 texture=brimlash_dart
-nbt.display.Name=\u8ffd\u8e2a\u786b\u706b\u5203
+nbt.display.Name=regex:\u8ffd\u8e2a\u786b\u706b\u5203|\u786b\u706b\u98de\u5f39
